--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Global Youth PT</title>
 </head>
-<body>
+<body style="background-image: url('Imagens/Frame\ 1.png'); background-size: fill;">
     <div class="main" style="background-image: url('Imagens/fundo_main.png'); background-size: cover; height: 120vh;">
         <div class="nav">
             <div class="container text-center">
@@ -40,7 +40,7 @@
     <div class="container"> 
         <div class="novidades_produtos text-center">
             <div class="titulo">
-                <h2 class="text-white text-center fw-bold" style="-webkit-text-stroke: 1px rgba(0, 0, 0, 0.282); font-size: 4em; margin-bottom: -5vh;">NOVIDADES</h2>
+                <h2 class="text-white text-center fw-bold" style="-webkit-text-stroke: 1px rgba(0, 0, 0, 0.100); font-size: 4em; margin-bottom: -5vh;">NOVIDADES</h2>
                 <h1 style="position: relative;" class="fs-3 fw-bold">NOVIDADES</h1>
             </div>
             <div class="row text-start my-5">
@@ -85,7 +85,7 @@
 
         <div class="novidades_produtos text-center">
             <div class="titulo">
-                <h2 class="text-white text-center fw-bold" style="-webkit-text-stroke: 1px rgba(0, 0, 0, 0.282); font-size: 4em; margin-bottom: -5vh;">BEST-SELLERS</h2>
+                <h2 class="text-white text-center fw-bold" style="-webkit-text-stroke: 1px rgba(0, 0, 0, 0.100); font-size: 4em; margin-bottom: -5vh;">BEST-SELLERS</h2>
                 <h1 style="position: relative;" class="fs-3 fw-bold">BEST-SELLERS</h1>
             </div>
             <div class="row text-start my-5">
@@ -127,6 +127,15 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="marcas">
+        <div class="container text-center">
+            <div class="titulo">
+                <h2 class="text-white text-center fw-bold" style="-webkit-text-stroke: 1px rgba(0, 0, 0, 0.100); font-size: 4em; margin-bottom: -7vh;">MARCAS QUE OFEREÇEMOS</h2>
+                <h1 style="position: relative;" class="fs-3 fw-bold">MARCAS QUE OFEREÇEMOS</h1>
+            </div>
+        </div>
+        <img src="Imagens/Marcas.png" class="my-5" alt="" style="width: 100%;">
     </div>
    </div>
 </body>
